Fixed header colors and dark mode links color
added gruvbox highlighter for code

--- a/assets/css/beautifuljekyll.css
+++ b/assets/css/beautifuljekyll.css
@@ -2,7 +2,8 @@
 layout: null
 ---
 
-@import url("pygment_highlights.css");
+ /* @import url("pygment_highlights.css"); */
+ @import url("gruvbox.css");
 
 /* INTER Font */
 :root {
@@ -16,7 +17,7 @@ layout: null
 /* --- General --- */
 
 html {
-  font-size: 100%
+  font-size: 16px; /* 1rem = 16px */
 }
 
 body {
@@ -44,14 +45,16 @@ p {
 }
 h1,h2,h3,h4,h5,h6 {
   font-family: 'Inter', 'Open Sans', 'Helvetica Neue', Helvetica, Arial, sans-serif;
-  font-weight: 500;
+  font-weight: 600;
   line-height: 1.1;
 }
 h1 {
   font-size: 1.6rem;
+  color: #D14D41;
 }
 h2 {
   font-size: 1.4rem;
+  color: #DA702C;
 }
 h3 {
   font-size: 1.2rem;
@@ -62,6 +65,10 @@ h4 {
 h1, h2, h3, h4 {
   margin-top: 1.3rem;
 /*  margin-bottom: -0.5rem*/
+}
+.big-img h1,
+.big-img h2 {
+  color: #FFFCF0;
 }
 a {
   color: {{ site.link-col | default: "#008AFF" }};
